--- a/_includes/menu-links.html
+++ b/_includes/menu-links.html
@@ -2,6 +2,6 @@
   <a href="{{site.baseurl}}/">Home</a>
   <a href="{{site.baseurl}}/about/">About</a>
   <a href="{{site.baseurl}}/contact/">Contact</a>
-  <a target="_blank" href="https://github.com/sharu725/karna">Project</a>
-  <a href="https://github.com/sharu725/karna/archive/master.zip">Download</a>
+  <a target="_blank" href="https://xiaolisang.github.io/lisang.github.io/">Project</a>
+  <a href="https://github.com/xiaolisang/lisang.github.io.git/master.zip">Download</a>
   <a>Version: {{site.version}}</a>
